2010-08-29  Francois Suter  <francois@typo3.org>

	* Fixed bug #14143: count_menuItems not working correctly (thanks to Frederic Gaus)

2010-08-29  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15525: Caching framework database backend does not free mysql resource in collectGarbage() (Thanks to Helmut Hummel)
	* Fixed bug #15258: Creating multiple pages doesn't consider the group permissions for all pages (Thanks to Lorenz Ulrich)

2010-08-29  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #15294: treeFilterReset disappears + minor optimization (Thanks to Felix Kopp)

2010-08-28  Stanislas Rolland  <typo3@sjbr.ca>

	* Updated htmlArea RTE version to 2.1.1

2010-08-28  Steffen Kamper  <steffen@typo3.org>

	* Added entry for NEWS.txt about #15586
	* Fixed bug #15586: Unecessary require_once in t3lib_cache_Factory (Thanks to Helmut Hummel)
	* Fixed bug #15574: t3lib_extmgmTest::getExtensionVersionForLoadedExtensionReturnsExtensionVersion fails (Thanks to Peter Kühn)

2010-08-28  Francois Suter  <francois@typo3.org>

	* Feature #15334: Allow separate cookie domains for FE and BE

2010-08-27  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #15579: Deprecation text of t3lib_div::fixed_lgd_pre() refers to deprecated function t3lib_div::fixed_lgd() (Thanks to Markus Klein)

2010-08-27  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #1728: Comma separated list don't accept spaces at "db_layout" in the 'addTables' feature (thanks to Niels Pardon)

2010-08-27  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15569: htmlArea RTE: RTE not loading when ExtJS 3.2.1 is used
	* Fixed bug #15570: htmlArea RTE: Incorrect height when loaded in a hidden tab with ExtJS 3.2.1
	* Fixed bug #15415: htmlArea RTE: RTEs hidden on load not usable with multiple RTEs in a record
	* Fixed bug #15328: htmlArea RTE: Strange behaviours inserting links in IE
	* Fixed bug #15584: htmlArea RTE: iframe baseURL may be incorrectly set