@@ -1,3 +1,7 @@
+2010-08-29  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #15354: htmlArea RTE: Remove link option not enabled on double-click in Firefox
+
 2010-08-28  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Updated htmlArea RTE version to 2.1.1
