@@ -1,3 +1,7 @@
+2010-08-29  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #15354: htmlArea RTE: Remove link option not enabled on double-click in Firefox
+
 2010-08-29  Francois Suter  <francois@typo3.org>
 
 	* Fixed bug #14143: count_menuItems not working correctly (thanks to Frederic Gaus)
